Stashing several articles and layouts

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 ---
 layout: default
-title: Jekyll Hello World
+title: NSHipster
 ---
 
-<h1>Hello World</h1>
+<h1>NSHipster</h1>
+<ul class="posts">
+{% for post in site.posts %}
+	<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
+
