--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@ layout: default
 title: NSHipster
 ---
 
-<ul class="posts">
 {% for post in site.posts %}
-	<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+	<article>
+    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+    {{ post | only_first_p }}
+  </article>
 {% endfor %}
-</ul>
 
