--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@ layout: default
 title: NSHipster
 ---
 
-{% for post in site.posts %}
-	<article>
-    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-    {{ post | only_first_p }}
-  </article>
-{% endfor %}
-
+<section id="posts">
+  {% for post in site.posts %}
+  	<article>
+      <header>
+        <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+      </header>
+      {{ post | only_first_p }}
+    </article>
+  {% endfor %}
+</section>
