Using proper, unobtrusive CSS selectors for Typekit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: NSHipster
   <article>
     <header>
       <hgroup>
-        <small class="tk-ff-providence-web-pro">This Week...</small>
+        <small>This Week...</small>
         <h1><a href="{{ site.posts.first.url }}">{{ site.posts.first.title }}</a></h1>
       </hgroup>
     </header>
