Introducing a hip chick for the NSLocale post

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ title: NSHipster
     {% else %}
       {{ site.posts.first | only_first_p }}
     {% endif %}
-
   </article>
-  <figure id="goat">
-    <figcaption>Mountain Goats are known for their hipster cred--or at the very least, their reactionary stance to the mainstream.</figcaption>
+
+  <figure id="chick">
+    <figcaption>She'll be a French Hen come next Spring, but for now, she's affecting a Parisian accent and smoking Pall Malls.</figcaption>
   </figure>
 </section>
 
