Adding corgi and animation

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ title: NSHipster
     <a class="readmore" href="{{ site.posts.first.url }}">Read more</a>
   </article>
 
-  <figure id="chick">
-    <figcaption>She'll be a French Hen come next Spring, but for now, she's affecting a Parisian accent and smoking Pall Malls.</figcaption>
+  <figure id="corgi">
+    <figcaption>Woof woof. Um... lemme think about it... woof.</figcaption>
   </figure>
 </section>
 
