Hipster Mallard: So obscure, it didn't even make it into the last commit

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ title: NSHipster
     <a class="readmore" href="{{ site.posts.first.url }}">Read more</a>
   </article>
 
-  <figure id="corgi">
-    <figcaption>Woof woof. Um... lemme think about it... woof.</figcaption>
+  <figure id="duck">
+    <figcaption>Hipster Mallard: Quacks in a tunnel... hears echo of Wayne Coyne circa 2003.</figcaption>
   </figure>
 </section>
 
