--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ title: NSHipster
     <a class="readmore" href="{{ site.posts.first.url }}">Read more</a>
   </article>
 
-  <figure id="duck">
-    <figcaption>Hipster Mallard: Quacks in a tunnel... hears echo of Wayne Coyne circa 2003.</figcaption>
+  <figure id="owl">
+    <figcaption>Who? Who? Justin Bieber? Never heard of him.</figcaption>
   </figure>
 </section>
 
