Re-instating goat

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ title: NSHipster
     <a class="readmore" href="{{ site.posts.first.url }}">Read more</a>
   </article>
 
-  <figure id="owl">
-    <figcaption>Who? Who? Justin Bieber? Never heard of him.</figcaption>
+  <figure id="goat">
+    <figcaption>Back for it's vinyl re-issue</figcaption>
   </figure>
 </section>
 
