Rotating in chick

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ title: NSHipster
     <a class="readmore" href="{{ site.posts.first.url }}">Read more</a>
   </article>
 
-  <figure id="goat">
-    <figcaption>Back for it's vinyl re-issue</figcaption>
+  <figure id="chick">
+    <figcaption>Coincidentally rotated in for a topic steeped in birdwatching advice.</figcaption>
   </figure>
 </section>
 
