--- a/nshipster.com/index.html
+++ b/nshipster.com/index.html
@@ -32,25 +32,10 @@ title: NSHipster
 
 <section id="publications">
   <h1>Publications</h1>
-  {% for book in site.data.books %}
-    {% assign identifier = book[0] %}
-    {% assign content = book[1] %}
-    <article id="{{ identifier }}" class="book" itemscope itemtype="http://schema.org/Product">
-      <div itemscope itemtype="http://schema.org/Book">
-        <link itemprop="bookFormat" href="http://schema.org/EBook"/>
-        <a href="{{ content.url }}" title="{{ content.title }}">
-          <img src="{{ content.image }}" class="cover" alt="{{ content.title }}" itemprop="image"/>
-        </a>
-        <span itemprop="name" style="display:none;">{{ content.title }}</span>
-        <span itemprop="author" style="display:none;">{{ content.author }}</span>
-        <div itemprop="offers" itemscope itemtype="http://schema.org/Offer" style="display:none;">
-          <link itemprop="availability" href="http://schema.org/InStock"/>
-          <meta itemprop="priceCurrency" content="USD"/>
-          <span itemprop="price">{{ content.price }}</span>
-        </div>
-      </div>
-    </article>
-  {% endfor %}
+
+  {% include book.html book="nshipster" %}
+  {% include book.html book="cfhipsterref" %}
+  {% include book.html book="nshipster-fake-book-objective-c" %}
 </section>
 
 <section id="popular">
