Updating NSHipster.cn meta description.

--- a/nshipster.cn/index.html
+++ b/nshipster.cn/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: NSHipster 中文版
+excerpt: "NSHipster 关注被忽略的 Objective-C、Swift 和 Cocoa 特性。每周更新。"
 ---
 
 <section id="latest">
