Adding NSHipster 2nd Ed

--- a/nshipster.com/index.html
+++ b/nshipster.com/index.html
@@ -32,6 +32,8 @@ title: NSHipster
 <section id="publications">
   <h1>Publications</h1>
 
+  {% include promo.html book="nshipster-swift" home="true" %}
+
   {% include book.html book="nshipster" %}
   {% include book.html book="cfhipsterref" %}
   {% include book.html book="nshipster-fake-book-objective-c" %}
