--- a/nshipster.com/index.html
+++ b/nshipster.com/index.html
@@ -15,6 +15,12 @@ title: NSHipster
   </article>
 </section>
 
+<section id="merchandise">
+  <h1>Merchandise</h1>
+
+  <a href="http://gumroad.com/nshipster/"><img src="http://nshipster.s3.amazonaws.com/merch.png" alt="NSHipster Merchandise" /></a>
+</section>
+
 <section id="recent">
   <h1>Recent Articles</h1>
 
