Fixed example index page.

--- a/nshipster.com/swift-documentation-example/docsets/.docset/Contents/Resources/Documents/index.html
+++ b/nshipster.com/swift-documentation-example/docsets/.docset/Contents/Resources/Documents/index.html
@@ -47,7 +47,9 @@
         <section>
           <section class="section">
             
-            <a href='#authors' class='anchor' aria-hidden=true><span class="header-anchor"></span></a><h3 id='authors'>Authors</h3>
+            <a href='#bicycle' class='anchor' aria-hidden=true><span class="header-anchor"></span></a><h1 id='bicycle'>Bicycle</h1>
+
+<p>A <a href="https://github.com/realm/jazzy">Jazzy</a>-generated example of the <a href="http://nshipster.com/swift-documentation/">Swift documentation format</a>.</p>
 
           </section>
         </section>
