Move image URL to config.

--- a/nshipster.com/index.html
+++ b/nshipster.com/index.html
@@ -18,7 +18,7 @@ title: NSHipster
 <section id="merchandise">
   <h1>Merchandise</h1>
 
-  <a href="http://gumroad.com/nshipster/"><img src="http://nshipster.s3.amazonaws.com/merch.png" alt="NSHipster Merchandise" /></a>
+  <a href="http://gumroad.com/nshipster/"><img src="{{ site.asseturl }}/merch.png" alt="NSHipster Merchandise" /></a>
 </section>
 
 <section id="recent">
